--- a/assests/css/bp-activity-feed-copy-link.css
+++ b/assests/css/bp-activity-feed-copy-link.css
@@ -1,19 +1,50 @@
-/* 
-activity-feed-styles.css 
+/*
+activity-feed-styles.css
 
 Add your own styles here to make theme updates easier.
 To override any styles from other stylesheets, simply copy them into here and edit away.
 
 */
 
-.generic-button .copy_activity_link   {
-        margin-left: 2px !important;
-        color: #bdbcbc !important;
-        letter-spacing: -.24px !important;
-        line-height: 1 !important;
-        font-family: 'Work Sans' !important;
-        /*-webkit-font-smoothing: auto;*/
-    }
-.generic-button .copy_activity_link:hover,#activity-cmt .all-comments-btn:hover{
-      color: #ffd281 !important;  
-  }
+.far {
+    cursor: pointer !important;
+}
+
+.generic-button .copy_activity_link {
+    margin-left: 2px !important;
+    color: #333 !important;
+    letter-spacing: -.24px !important;
+    line-height: 1 !important;
+    /* font-family: 'Work Sans' !important; */
+    /*-webkit-font-smoothing: auto;*/
+}
+.generic-button .copy_activity_link:hover,#activity-cmt .all-comments-btn:hover {
+    color: #333 !important;
+}
+
+.button-copylink {
+    display: flex  !important;
+    align-items: center  !important;
+    column-gap: 2px  !important;
+    border: 0  !important;
+    box-shadow: none  !important;
+    background: 0 0  !important;
+    background: #fff  !important;
+    border-color: #ccc  !important;
+    border-style: solid  !important;
+    /* border-width: 1px  !important; */
+    color: #555  !important;
+    cursor: pointer  !important;
+    font-size: inherit  !important;
+    font-weight: 400  !important;
+    outline: 0  !important;
+    line-height: 1.3  !important;
+    padding: .3em .7em  !important;
+    text-align: center  !important;
+    text-decoration: none  !important;
+    width: auto  !important;
+}
+
+.button-copylink:hover {
+    background-color: #eaeaea !important;
+}
